--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
