--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mesciussample",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "build": "pkg ."
   },
   "author": "kmbin92",
   "license": "ISC",
@@ -14,8 +15,18 @@
     "express-ejs-layouts": "^2.5.1",
     "path": "^0.12.7"
   },
+  "bin": {
+    "app": "./app.js"
+  },
+  "pkg":{
+    "assets": [
+      "static/**/*",
+      "views/**/*"
+    ]
+  },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "pkg": "^5.8.1"
   },
   "type": "commonjs"
 }
