--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "build": "pkg ."
+    "start": "NODE_ENV=production node app.js"
   },
   "author": "kmbin92",
   "license": "ISC",
