--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "kmbin92",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -18,7 +19,7 @@
   "bin": {
     "app": "./app.js"
   },
-  "pkg":{
+  "pkg": {
     "assets": [
       "static/**/*",
       "views/**/*"
